# F-for-Frida

./: .gitignore  CONTRIBUTING.md  F-for-Frida.py  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
f_for_frida/: __init__.py  cli.py
f_for_frida/core/: __init__.py  adb.py  compatibility.py  device.py  doctor.py  frida_manager.py  hooker.py  scripts.py  wireless.py
f_for_frida/utils/: __init__.py  config.py  downloader.py  logger.py
tests/: __init__.py  test_adb.py  test_config.py  test_device.py  test_doctor.py  test_frida_manager.py  test_scripts.py
