[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "f-for-frida"
version = "2.0.0"
description = "Automated Frida Server Management for Android Devices"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Mohamed Hisham Sharaf"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Testing",
]
keywords = [
    "frida",
    "android",
    "security",
    "reverse-engineering",
    "mobile",
    "adb",
    "debugging",
]
dependencies = [
    "requests>=2.28.0",
    "tqdm>=4.65.0",
    "colorama>=0.4.6",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "types-requests>=2.28.0",
]

[project.scripts]
f4f = "f_for_frida.cli:main"
f-for-frida = "f_for_frida.cli:main"

[project.urls]
Homepage = "https://github.com/CyberDemon73/F-for-Frida"
Repository = "https://github.com/CyberDemon73/F-for-Frida"
Issues = "https://github.com/CyberDemon73/F-for-Frida/issues"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
